[gd_scene load_steps=3 format=3 uid="uid://gupo6yg4dpiy"]

[ext_resource type="Script" path="res://Source/DayNight.gd" id="1_m8ftv"]
[ext_resource type="PackedScene" uid="uid://ckhoevm4svsgt" path="res://Source/day_change.tscn" id="2_mvqf3"]

[node name="DayNight" type="Timer"]
wait_time = 2.0
script = ExtResource("1_m8ftv")

[node name="DayChange" parent="." instance=ExtResource("2_mvqf3")]
custom_minimum_size = Vector2(0, 0)

[node name="TextureRect" parent="DayChange" index="0"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="EndofDay" from="." to="." method="_on_endof_day"]
[connection signal="timeout" from="." to="." method="_on_timeout"]
[connection signal="animation_finished" from="DayChange/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="DayChange"]
